# landscape-charm

./: .bzrignore  .coverage  .flake8  .gitignore  .isort.cfg  CONTRIBUTING.md  HACKING.md  LICENSE  Makefile  Migrating away from the legacy HAProxy charm.md  README.md  TODO  actions.yaml  bundle.yaml  charm-helpers.yaml  charmcraft.yaml  config.yaml  copyright  metadata.yaml  pyproject.toml  refresh_versions.toml  requirements-dev.txt  ruff.toml  run_tests  run_tests.py  tox.ini
.github/: release.yaml
.github/workflows/: build.yaml  ci.yaml  lint.yaml  release.yaml  terraform-docs.yaml  tox.yaml  unit-test.yaml
actions/: add-admin  bootstrap  migrate-schema  pause  resume  upgrade
bundle-examples/: bundle.yaml  haproxy-router.bundle.yaml  ingress.bundle.yaml  internal-haproxy.bundle.yaml  legacy.bundle.yaml  postgres14.bundle.yaml  postgres16.bundle.yaml
bundle-examples/ingress/: .gitignore  ingress.bundle.yaml  ingress.tf  variables.tf  versions.tf
bundle-examples/internal-haproxy/: .gitignore  .terraform.lock.hcl  get_juju_uuid_by_name.sh  main.tf  (+5 more)
config/: landscape-deployments.cfg  landscape-deployments.yaml  landscape-max.cfg  license-file  local.yaml  repo-file  vhost.tmpl  vhostssl.tmpl  vhostssl.tmpl.legacy
dev/: deploy-landscape-client  deployer  fix-config  install-amulet  make-test-config  ubuntu-deps  update-charm-revision-numbers
hooks/: amqp-relation-changed  amqp-relation-joined  application-dashboard-relation-joined  application_dashboard_relation.py  common.py  config-changed  db-admin-proxy-relation-changed  db-admin-proxy-relation-joined  db-relation-changed  foo  haproxy.cfg  hooks.py  install  landscape-relation-joined  peer-relation-joined  registration-relation-joined  services.sh  site-definition  start  start-services  stop  test_hooks.py  upgrade-charm  website-relation-joined
lib/: action.py  add_admin.py  apt.py  bootstrap.py  cluster.py  config.py  debconf.py  error.py  hook.py  install.py  migrate_schema.py  paths.py  pause.py  resume.py  services.py  upgrade.py  upgradecharm.py  utils.py
src/: autoregistration.py  charm.py  config.py  database.py  haproxy-config.yaml  haproxy.cfg.j2  haproxy.py  settings_files.py
templates/: landscape-server  service.conf
terraform/: .gitignore  .terraform.lock.hcl  README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
tests/: 00-deps  01-begin  01-begin.py  02-ssl.py  02-sslcert  assets.py  conftest.py  deprecated_service.conf  helpers.py  layers.py  test_application_dashboard.py  test_charm.py  test_haproxy_refactor.py  test_haproxy_relation.py  test_helpers.py  test_settings_files.py  updated_service.conf
(+170 files in other folders)
